syntax = "proto3";

package tripsphere.chat;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "org.tripsphere.chat";
option java_outer_classname = "ProtocolProto";

message FilePart {
  oneof file {
    string file_with_uri = 1;
    bytes file_with_bytes = 2;
  }
  string mime_type = 3;
  string name = 4;
}

message DataPart {
  google.protobuf.Struct data = 1;
}

message Part {
  oneof part {
    string text = 1;
    FilePart file = 2;
    DataPart data = 3;
  }
  // Optional metadata associated with this part.
  google.protobuf.Struct metadata = 4;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_AGENT = 2;
}

message Message {
  // ID for the message.
  string message_id = 1;
  // Optional conversation ID of the message.
  string conversation_id = 2;
  // Optional task ID of the message.
  string task_id = 3;
  // A role for the message.
  Role role = 4;
  // Parts is the container of the message content.
  repeated Part parts = 5;
  // Any optional metadata to provide along with the message.
  google.protobuf.Struct metadata = 6;
  // The URIs of extensions that are present or contributed to this Message.
  repeated string extensions = 7;
}

message Artifact {
  // ID for the artifact.
  string artifact_id = 1;
  // A human readable name for the artifact.
  string name = 2;
  // Optional human readable description of the artifact.
  string description = 3;
  // The content of the artifact.
  repeated Part parts = 4;
  // Optional metadata included with the artifact.
  google.protobuf.Struct metadata = 5;
  // The URIs of extensions that are present or contributed to this Artifact.
  repeated string extensions = 6;
}

enum TaskState {
  TASK_STATE_UNSPECIFIED = 0;
  TASK_STATE_SUBMITTED = 1;
  TASK_STATE_WORKING = 2;
  TASK_STATE_COMPLETED = 3;
  TASK_STATE_FAILED = 4;
  TASK_STATE_CANCELLED = 5;
  TASK_STATE_INPUT_REQUIRED = 6;
  TASK_STATE_REJECTED = 7;
  TASK_STATE_AUTH_REQUIRED = 8;
}

message TaskStatus {
  // The current state of this task.
  TaskState state = 1;
  // A message associated with the status.
  Message update = 2;
  // Timestamp when the status was recorded.
  google.protobuf.Timestamp timestamp = 3;
}

message Task {
  // ID for the task, generated by the server for a new task.
  string task_id = 1;
  // ID of the conversation this task belongs to.
  string conversation_id = 2;
  // The current status of a Task, including state and a message.
  TaskStatus status = 3;
  // A set of output artifacts for a task.
  repeated Artifact artifacts = 4;
  // The history of interactions from a task.
  repeated Message history = 5;
  // A key/value object to store custom metadata about a task.
  google.protobuf.Struct metadata = 6;
}

message TaskStatusUpdateEvent {
  // The ID of the task that is changed.
  string task_id = 1;
  // The ID of the conversation that the task belongs to.
  string conversation_id = 2;
  // The new status of the task.
  TaskStatus status = 3;
  // Whether this is the last status update expected for this task.
  bool final = 4;
  // Optional metadata to associate with the task update.
  google.protobuf.Struct metadata = 5;
}

message TaskArtifactUpdateEvent {
  // The ID of the task for this artifact.
  string task_id = 1;
  // The ID of the conversation that this task belongs to.
  string conversation_id = 2;
  // The artifact itself.
  Artifact artifact = 3;
  // Whether this should be appended to a prior one produced.
  bool append = 4;
  // Whether this represents the last part of an artifact.
  bool last_chunk = 5;
  // Optional metadata associated with the artifact update.
  google.protobuf.Struct metadata = 6;
}